🔒 fix: use EncryptedSharedPreferences for secure data storage on Android
This change migrates the Android implementation of `Settings` to use `EncryptedSharedPreferences` instead of standard `SharedPreferences`.

- Added `androidx.security:security-crypto:1.1.0` dependency.
- Updated `Settings.android.kt` to initialize `prefs` using `MasterKey` and `EncryptedSharedPreferences`.
- Changed the preference file name to `jules_secure_preferences` to ensure a clean transition and avoid compatibility issues with existing cleartext preferences.

This fix addresses the security vulnerability where sensitive data, such as API keys, were stored in cleartext.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ kotlinx-datetime = "0.6.0"
 markdown-renderer = "0.27.0"
 ktor = "3.0.3"
 kotlinx-serialization = "1.8.0"
+androidx-security-crypto = "1.1.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -54,6 +55,7 @@ ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "androidx-security-crypto" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
